--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,12 +19,13 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r src/requirements.txt
+        pip install -r requirements.txt
         pip install pyinstaller
         
     - name: Build Windows
-      run: pyinstaller build_scripts/telespam.spec
-      
+      run: |
+        python -m PyInstaller telespam.spec
+        
     - name: Upload Windows artifact
       uses: actions/upload-artifact@v4
       with:
@@ -44,12 +45,13 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r src/requirements.txt
+        pip install -r requirements.txt
         pip install pyinstaller
         
     - name: Build macOS
-      run: pyinstaller build_scripts/telespam.spec
-      
+      run: |
+        python -m PyInstaller telespam.spec
+        
     - name: Upload macOS artifact
       uses: actions/upload-artifact@v4
       with:
