--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,11 +20,16 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install telethon cryptg pillow
         pip install pyinstaller
         
     - name: Build Windows
       run: |
-        pyinstaller --clean telespam.spec
+        pyinstaller --clean --debug all telespam.spec
+        
+    - name: List build directory
+      run: |
+        dir dist
         
     - name: Upload Windows artifact
       uses: actions/upload-artifact@v4
@@ -46,11 +51,16 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install telethon cryptg pillow
         pip install pyinstaller
         
     - name: Build macOS
       run: |
-        pyinstaller --clean telespam.spec
+        pyinstaller --clean --debug all telespam.spec
+        
+    - name: List build directory
+      run: |
+        ls -la dist
         
     - name: Upload macOS artifact
       uses: actions/upload-artifact@v4
