--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,19 +17,17 @@ jobs:
         python-version: '3.12'
         
     - name: Install dependencies
+      shell: bash
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install telethon cryptg pillow
-        pip install pyinstaller
-        
+        pip install telethon cryptg pillow pyinstaller
+        pip install tkinter tk
+
     - name: Build Windows
+      shell: bash
       run: |
-        pyinstaller --clean --debug all telespam.spec
-        
-    - name: List build directory
-      run: |
-        dir dist
+        pyinstaller --name TeleSpam --onefile --noconsole --clean src/TeleSpam.py
         
     - name: Upload Windows artifact
       uses: actions/upload-artifact@v4
@@ -51,16 +49,12 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install telethon cryptg pillow
-        pip install pyinstaller
-        
+        pip install telethon cryptg pillow pyinstaller
+        pip install python-tk tk
+
     - name: Build macOS
       run: |
-        pyinstaller --clean --debug all telespam.spec
-        
-    - name: List build directory
-      run: |
-        ls -la dist
+        pyinstaller --name TeleSpam --onefile --noconsole --clean src/TeleSpam.py
         
     - name: Upload macOS artifact
       uses: actions/upload-artifact@v4
