--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,82 +2,82 @@ name: Build Application
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   workflow_dispatch:
 
 jobs:
   build-windows:
     runs-on: windows-latest
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.12'
-        
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install telethon==1.24.0
-        python -m pip install cryptg==0.4.0
-        python -m pip install pillow
-        python -m pip install pyinstaller
-        python -m pip install tk
-        
-    - name: Create Directory
-      run: |
-        mkdir -p dist
-        mkdir -p build
-        
-    - name: Build Windows
-      run: |
-        pyinstaller --name TeleSpam `
-          --onefile `
-          --windowed `
-          --clean `
-          --distpath dist `
-          --workpath build `
-          --add-data "src;src" `
-          src/TeleSpam.py
-        
-    - name: Verify Build
-      run: |
-        dir dist
-        
-    - name: Upload Windows artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: TeleSpam-Windows
-        path: dist/TeleSpam.exe
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install telethon --upgrade
+          python -m pip install cryptg --upgrade
+          python -m pip install pillow
+          python -m pip install pyinstaller
+          python -m pip install tk
+
+      - name: Create Directory
+        run: |
+          mkdir -p dist
+          mkdir -p build
+
+      - name: Build Windows
+        run: |
+          pyinstaller --name TeleSpam `
+            --onefile `
+            --windowed `
+            --clean `
+            --distpath dist `
+            --workpath build `
+            --add-data "src;src" `
+            src/TeleSpam.py
+
+      - name: Verify Build
+        run: |
+          dir dist
+
+      - name: Upload Windows artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: TeleSpam-Windows
+          path: dist/TeleSpam.exe
 
   build-macos:
     runs-on: macos-latest
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.12'
-        
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip --verbose
-        pip install telethon cryptg pillow pyinstaller --verbose
-        brew install python-tk
+      - uses: actions/checkout@v4
 
-    - name: Build macOS
-      run: |
-        pyinstaller --name TeleSpam --onefile --noconsole --clean src/TeleSpam.py --debug all
-        
-    - name: List directory
-      run: |
-        ls -la
-        ls -la dist
-        
-    - name: Upload macOS artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: TeleSpam-macOS
-        path: dist/TeleSpam.app
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip --verbose
+          pip install telethon cryptg pillow pyinstaller --verbose
+          brew install python-tk
+
+      - name: Build macOS
+        run: |
+          pyinstaller --name TeleSpam --onefile --noconsole --clean src/TeleSpam.py --debug all
+
+      - name: List directory
+        run: |
+          ls -la
+          ls -la dist
+
+      - name: Upload macOS artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: TeleSpam-macOS
+          path: dist/TeleSpam.app
